✨ feat(推荐书籍电影):

--- a/index.html
+++ b/index.html
@@ -181,10 +181,34 @@
 
 		<h2>推荐书籍</h2>
 		<ol>
-			<li>永恒的终结</li>
-			<li>禅与摩托车维修艺术</li>
-			<li>悉达多</li>
-			<li>Personal Development for smart people</li>
+			<li>
+				<strong>永恒的终结</strong>：长生不老，众生六道毁就毁在这四个字上！
+				<img src="image-6.png" alt="永恒的终结">
+			</li>
+			<li>
+				<strong>禅与摩托车维修艺术</strong>：什么是好？其实你我自然知道
+				<img src="image-7.png" alt="禅与摩托车维修艺术">
+			</li>
+			<li>
+				<strong>悉达多</strong>：放下屠刀，立地成佛
+				<img src="image-8.png" alt="悉达多">
+			</li>
+			<li>
+				<strong>Personal Development for smart people</strong>：吾日三省吾身：Truth Love Power
+				<img src="image-9.png" alt="Personal Development for smart people">
+			</li>
+		</ol>
+
+		<h2>推荐电影</h2>
+		<ol>
+			<li>
+				<strong>死亡诗社（春风化雨）</strong>：Carpe Diem！ My Captain！
+				<img src="image-4.png" alt="死亡诗社">
+			</li>
+			<li>
+				<strong>Rudy（追梦赤子心）</strong>：When people say dreams never come true，tell them about Rudy
+				<img src="image-5.png" alt="Rudy">
+			</li>
 		</ol>
 	</div>
 
